Mar 13th, 2006: Alex Burger <alex_b@users.sourceforge.net>
- Move all SQL update code to subroutines (mysql_update etc).

Mar 4th, 2006: Alex Burger <alex_b@users.sourceforge.net>
- Fix bug where snmpttconvertmib would not translate a TRAP-TYPE / 
  NOTIFICATION-TYPE line if it was split across two lines.  Thanks
  to Todd A. Green.  Bug 1438794.

Jan 20th, 2006: Alex Burger <alex_b@users.sourceforge.net>
- Fix bug in process trap for $match_temp 'remove any white space from before 
  and after i modifier'
- Added 'use strict' to snmptt
- Added 'use strict' to snmpttconvertmib
- Added 'use strict' to snmpttconvert
- Added 'use strict' to snmptthandler and improved debugging
- Changed version to snmptt_1.2beta

Jan 17th, 2006: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to snmptt_1.1

Dec 31st, 2005: Alex Burger <alex_b@users.sourceforge.net>
- Clean up white space formatting of code.

Dec 10th, 2005: Alex Burger <alex_b@users.sourceforge.net>
- Update version stamp in all files
- Changed 'sub match' to only do variable substitution if needed.

Nov 22nd, 2005: Alex Burger <alex_b@users.sourceforge.net>
- MATCH statement now accepts any variable name instead of only
  enterprise variables.  Example: MATCH $s:(Normal)

Nov 5th, 2005: Alex Burger <alex_b@users.sourceforge.net>
- Added NODES MODE= snmptt.conf file option to allow you to 
  select either POS (positive - the default) or NEG (negative)
  for NODES matches.  If set to NEG, then the NODES is a 'match'
  only if NONE of the NODES entries match.  POS = x | x | x etc.
  NEG = !x & !x & !x etc.
- Fixed bug in NODES where NODES entries from previous EVENTs
  were not being purged correctly.
- Changed version to snmptt_1.1beta2

Nov 5th, 2005: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to snmptt_1.1beta1
- Changed MySQL INSERT statements to PREPARE / EXECUTE as it is
  safer than trying to escape all the fields manually.  This way
  all escaping is done via the MySQL Perl module.