@@ -325,6 +325,11 @@ mysql_dbi_table = snmptt
 # Note: unknown_trap_log_enable must be enabled.
 mysql_dbi_table_unknown = snmptt_unknown
 
+# MySQL: Table to use for statistics
+# Note: statistics_interval must be set.
+#mysql_dbi_table_statistics = snmptt_statistics
+mysql_dbi_table_statistics = 
+
 # MySQL: Username to use
 mysql_dbi_username = snmpttuser
 
@@ -381,6 +386,11 @@ postgresql_dbi_database = snmptt
 # Note: unknown_trap_log_enable must be enabled.
 postgresql_dbi_table_unknown = snmptt_unknown
 
+# PostgreSQL: Table to use for statistics
+# Note: statistics_interval must be set.
+#postgresql_dbi_table_statistics = snmptt_statistics
+postgresql_dbi_table_statistics = 
+
 # PostgreSQL: Table to use
 postgresql_dbi_table = snmptt
 
@@ -424,6 +434,11 @@ dbd_odbc_table = snmptt
 # Leave blank to disable logging of unknown traps to DBD:ODBC
 # Note: unknown_trap_log_enable must be enabled.
 dbd_odbc_table_unknown = snmptt_unknown
+
+# DBD:ODBC: Table to use for statistics
+# Note: statistics_interval must be set.
+#dbd_odbc_table_statistics = snmptt_statistics
+dbd_odbc_table_statistics = 
 
 # DBD:ODBC: Username to use
 dbd_odbc_username = snmptt
